# midigw

./: CMakeLists.txt  README.md
config/: midigw.service
sandbox/: clock.c  midi.py  midi_so.c  old.midi.c  st.c  timer.c  ttt.c
src/: cmdline.c  cmdline.h  drift.c  midi-gw.py  tapper.c  tapper.ggo
